--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
   background: no-repeat center center fixed;
   background-size: cover;
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Zalando Sans Expanded", sans-serif;
   text-shadow: 0px 0px 20px #242424;
 }
 
